@@ -1,0 +1,6 @@
+#ifndef _LIBREPLACE_MEMDUP_H
+#define _LIBREPLACE_MEMDUP_H
+
+void * memdup(const void * src, size_t size);	
+
+#endif // _LIBREPLACE_MEMDUP_H
